--- a/beck_app/src/main/webapp/WEB-INF/web.xml
+++ b/beck_app/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
         <web-resource-collection>
             <web-resource-name>AdminResources</web-resource-name>
             <description/>
-            <url-pattern>/faces/admin/*</url-pattern>
+            <url-pattern>/faces/admin_views/*</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
         </web-resource-collection>
@@ -43,7 +43,7 @@
         <web-resource-collection>
             <web-resource-name>UserResources</web-resource-name>
             <description/>
-            <url-pattern>/faces/user/*</url-pattern>
+            <url-pattern>/faces/user_views/*</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
         </web-resource-collection>
@@ -67,7 +67,7 @@
     </security-constraint>
     <login-config>
         <auth-method>FORM</auth-method>
-        <realm-name>jdbc-realm</realm-name>
+        <realm-name>jdbcRealm</realm-name>
         <form-login-config>
             <form-login-page>/login/login.xhtml</form-login-page>
             <form-error-page>/login/error.xhtml</form-error-page>
