--- a/beck_app/pom.xml
+++ b/beck_app/pom.xml
@@ -16,6 +16,11 @@
     
     <dependencies>
         <dependency>
+          <groupId>org.primefaces.themes</groupId>
+          <artifactId>all-themes</artifactId>
+          <version>1.0.10</version>
+        </dependency>
+        <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>5.0</version>
@@ -30,6 +35,11 @@
             <artifactId>eclipselink</artifactId>
             <version>2.5.2</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.omnifaces</groupId>
+            <artifactId>omnifaces</artifactId>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
