--- a/beck_app/src/main/webapp/WEB-INF/web.xml
+++ b/beck_app/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,10 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
-    
     <context-param>
-    <param-name>primefaces.THEME</param-name>
-    <param-value>#{themeService.chosen}</param-value>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>#{themeService.chosen}</param-value>
     </context-param>
-    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -33,16 +31,16 @@
             <web-resource-name>AdminResources</web-resource-name>
             <description/>
             <url-pattern>/faces/admin_views/*</url-pattern>
-            <http-method>GET</http-method>
-            <http-method>POST</http-method>
         </web-resource-collection>
         <web-resource-collection>
             <web-resource-name>AdminLogin</web-resource-name>
             <description/>
             <url-pattern>/faces/login/*</url-pattern>
-            <http-method>GET</http-method>
-            <http-method>POST</http-method>
         </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>admin</role-name>
+        </auth-constraint>
     </security-constraint>
     <security-constraint>
         <display-name>UserAccess</display-name>
@@ -50,16 +48,16 @@
             <web-resource-name>UserResources</web-resource-name>
             <description/>
             <url-pattern>/faces/user_views/*</url-pattern>
-            <http-method>GET</http-method>
-            <http-method>POST</http-method>
         </web-resource-collection>
         <web-resource-collection>
             <web-resource-name>LoginUser</web-resource-name>
             <description/>
             <url-pattern>/faces/login/*</url-pattern>
-            <http-method>GET</http-method>
-            <http-method>POST</http-method>
         </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>user</role-name>
+        </auth-constraint>
     </security-constraint>
     <security-constraint>
         <display-name>GuestAccess</display-name>
@@ -70,13 +68,17 @@
             <http-method>GET</http-method>
             <http-method>POST</http-method>
         </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>guest</role-name>
+        </auth-constraint>
     </security-constraint>
     <login-config>
         <auth-method>FORM</auth-method>
         <realm-name>jdbcRealm</realm-name>
         <form-login-config>
-            <form-login-page>/login/login.xhtml</form-login-page>
-            <form-error-page>/login/error.xhtml</form-error-page>
+            <form-login-page>/faces/login/login.xhtml</form-login-page>
+            <form-error-page>/faces/login/error.xhtml</form-error-page>
         </form-login-config>
     </login-config>
     <security-role>
