--- a/beck_app/pom.xml
+++ b/beck_app/pom.xml
@@ -16,6 +16,11 @@
     
     <dependencies>
         <dependency>
+   <groupId>commons-fileupload</groupId>
+   <artifactId>commons-fileupload</artifactId>
+   <version>1.3.1</version> <!-- makesure correct version here -->
+</dependency>
+        <dependency>
           <groupId>org.primefaces.themes</groupId>
           <artifactId>all-themes</artifactId>
           <version>1.0.10</version>
