--- a/beck_app/src/main/webapp/WEB-INF/web.xml
+++ b/beck_app/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     </context-param>
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>afterdark</param-value>
+        <param-value>home</param-value>
     </context-param>
     <context-param>
         <param-name>primefaces.UPLOADER</param-name>
