fix zamykanie okienek + spolszczanie

--- a/beck_app/src/main/resources/Bundle.properties
+++ b/beck_app/src/main/resources/Bundle.properties
@@ -74,139 +74,139 @@ ListAddressTitle_city=City
 ListAddressTitle_country=Kraj
 ListAddressTitle_street=Ulica
 ListAddressTitle_suburb=Dzielnica
-CommunicationCreated=Communication zosta\u0142 poprawnie dodany.
-CommunicationUpdated=Communication zosta\u0142 poprawnie zmieniony.
-CommunicationDeleted=Communication zosta\u0142 poprawnie usuni\u0119ty.
-CreateCommunicationTitle=Utw\u00f3rz nowy Communication
+CommunicationCreated=Rekord komunikacji zosta\u0142 poprawnie dodany.
+CommunicationUpdated=Rekord komunikacji zosta\u0142 poprawnie zmieniony.
+CommunicationDeleted=Rekord komunikacji zosta\u0142 poprawnie usuni\u0119ty.
+CreateCommunicationTitle=Utw\u00f3rz nowy rekord komunikacji
 CreateCommunicationSaveLink=Zapisz
-CreateCommunicationShowAllLink=Poka\u017c wszystkie Communication Items
-CreateCommunicationIndexLink=Index
+CreateCommunicationShowAllLink=Poka\u017c wszystkie rekord komunikacji
+CreateCommunicationIndexLink=Indeks
 CreateCommunicationLabel_id=Id:
-CreateCommunicationRequiredMessage_id=The Id pole jest wymagane.
+CreateCommunicationRequiredMessage_id=Pole ID jest wymagane.
 CreateCommunicationTitle_id=Id
-CreateCommunicationLabel_message=Message:
-CreateCommunicationTitle_message=Message
-CreateCommunicationLabel_title=Title:
-CreateCommunicationTitle_title=Title
-CreateCommunicationLabel_userIdFrom=UserIdFrom:
-CreateCommunicationRequiredMessage_userIdFrom=The UserIdFrom pole jest wymagane.
-CreateCommunicationTitle_userIdFrom=UserIdFrom
-CreateCommunicationLabel_userIdTo=UserIdTo:
-CreateCommunicationRequiredMessage_userIdTo=The UserIdTo pole jest wymagane.
-CreateCommunicationTitle_userIdTo=UserIdTo
-EditCommunicationTitle=Edytuj Communication
+CreateCommunicationLabel_message=Tre\u015b\u0107:
+CreateCommunicationTitle_message=Tre\u015b\u0107
+CreateCommunicationLabel_title=Tytu\u0142:
+CreateCommunicationTitle_title=Tytu\u0142
+CreateCommunicationLabel_userIdFrom=Od:
+CreateCommunicationRequiredMessage_userIdFrom=Pole Od jest wymagane.
+CreateCommunicationTitle_userIdFrom=Od
+CreateCommunicationLabel_userIdTo=Do:
+CreateCommunicationRequiredMessage_userIdTo=Pole Do jest wymagane.
+CreateCommunicationTitle_userIdTo=Do
+EditCommunicationTitle=Edytuj rekord komunikacji
 EditCommunicationSaveLink=Zapisz
 EditCommunicationViewLink=Poka\u017c
-EditCommunicationShowAllLink=Poka\u017c wszystkie Communication Items
-EditCommunicationIndexLink=Index
+EditCommunicationShowAllLink=Poka\u017c wszystkie rekordy komunikacji
+EditCommunicationIndexLink=Indeks
 EditCommunicationLabel_id=Id:
 EditCommunicationRequiredMessage_id=The Id pole jest wymagane.
 EditCommunicationTitle_id=Id
-EditCommunicationLabel_message=Message:
-EditCommunicationTitle_message=Message
-EditCommunicationLabel_title=Title:
-EditCommunicationTitle_title=Title
-EditCommunicationLabel_userIdFrom=UserIdFrom:
-EditCommunicationRequiredMessage_userIdFrom=The UserIdFrom pole jest wymagane.
-EditCommunicationTitle_userIdFrom=UserIdFrom
-EditCommunicationLabel_userIdTo=UserIdTo:
-EditCommunicationRequiredMessage_userIdTo=The UserIdTo pole jest wymagane.
-EditCommunicationTitle_userIdTo=UserIdTo
+EditCommunicationLabel_message=Tre\u015b\u0107:
+EditCommunicationTitle_message=Tre\u015b\u0107
+EditCommunicationLabel_title=Tytu\u0142:
+EditCommunicationTitle_title=Tytu\u0142
+EditCommunicationLabel_userIdFrom=Od:
+EditCommunicationRequiredMessage_userIdFrom=Pole Od jest wymagane.
+EditCommunicationTitle_userIdFrom=Od
+EditCommunicationLabel_userIdTo=Do:
+EditCommunicationRequiredMessage_userIdTo=Pole Do jest wymagane.
+EditCommunicationTitle_userIdTo=Do
 ViewCommunicationTitle=Poka\u017c
 ViewCommunicationDestroyLink=Usu\u0144
 ViewCommunicationEditLink=Edytuj
-ViewCommunicationCreateLink=Utw\u00f3rz nowy Communication
-ViewCommunicationShowAllLink=Poka\u017c wszystkie Communication Items
-ViewCommunicationIndexLink=Index
+ViewCommunicationCreateLink=Utw\u00f3rz nowy rekord komunikacji
+ViewCommunicationShowAllLink=Poka\u017c wszystkie rekord komunikacji
+ViewCommunicationIndexLink=Indeks
 ViewCommunicationLabel_id=Id:
 ViewCommunicationTitle_id=Id
-ViewCommunicationLabel_message=Message:
-ViewCommunicationTitle_message=Message
-ViewCommunicationLabel_title=Title:
-ViewCommunicationTitle_title=Title
-ViewCommunicationLabel_userIdFrom=UserIdFrom:
-ViewCommunicationTitle_userIdFrom=UserIdFrom
-ViewCommunicationLabel_userIdTo=UserIdTo:
-ViewCommunicationTitle_userIdTo=UserIdTo
+ViewCommunicationLabel_message=Tre\u015b\u0107:
+ViewCommunicationTitle_message=Tre\u015b\u0107
+ViewCommunicationLabel_title=Tytu\u0142:
+ViewCommunicationTitle_title=Tytu\u0142
+ViewCommunicationLabel_userIdFrom=Od:
+ViewCommunicationTitle_userIdFrom=Od
+ViewCommunicationLabel_userIdTo=Do:
+ViewCommunicationTitle_userIdTo=Do
 ListCommunicationTitle=List
-ListCommunicationEmpty=(No Communication Items Found)
+ListCommunicationEmpty=Nie znaleziono rekord\u00f3w
 ListCommunicationDestroyLink=Usu\u0144
 ListCommunicationEditLink=Edytuj
 ListCommunicationViewLink=Poka\u017c
-ListCommunicationCreateLink=Utw\u00f3rz nowy Communication
-ListCommunicationIndexLink=Index
+ListCommunicationCreateLink=Utw\u00f3rz nowy rekord komunikacji
+ListCommunicationIndexLink=Indeks
 ListCommunicationTitle_id=Id
-ListCommunicationTitle_message=Message
-ListCommunicationTitle_title=Title
-ListCommunicationTitle_userIdFrom=UserIdFrom
-ListCommunicationTitle_userIdTo=UserIdTo
-EventCreated=Event zosta\u0142 poprawnie dodany.
-EventUpdated=Event zosta\u0142 poprawnie zmieniony.
-EventDeleted=Event zosta\u0142 poprawnie usuni\u0119ty.
-CreateEventTitle=Utw\u00f3rz nowy Event
+ListCommunicationTitle_message=Tre\u015b\u0107
+ListCommunicationTitle_title=Tytu\u0142
+ListCommunicationTitle_userIdFrom=Od
+ListCommunicationTitle_userIdTo=Do
+EventCreated=Rekord wydarzenia zosta\u0142 poprawnie dodany.
+EventUpdated=Rekord wydarzenia zosta\u0142 poprawnie zmieniony.
+EventDeleted=Rekord wydarzenia zosta\u0142 poprawnie usuni\u0119ty.
+CreateEventTitle=Utw\u00f3rz nowy Rekord wydarzenia
 CreateEventSaveLink=Zapisz
-CreateEventShowAllLink=Poka\u017c wszystkie Event Items
-CreateEventIndexLink=Index
+CreateEventShowAllLink=Poka\u017c wszystkie rekordy wydarzenia
+CreateEventIndexLink=Indeks
 CreateEventLabel_id=Id:
-CreateEventRequiredMessage_id=The Id pole jest wymagane.
+CreateEventRequiredMessage_id=Pole Id jest wymagane.
 CreateEventTitle_id=Id
-CreateEventLabel_eventDesc=EventDesc:
-CreateEventTitle_eventDesc=EventDesc
-CreateEventLabel_eventName=EventName:
-CreateEventTitle_eventName=EventName
+CreateEventLabel_eventDesc=Opis wydarzenia:
+CreateEventTitle_eventDesc=Opis wydarzenia
+CreateEventLabel_eventName=Nazwa wydarzenia:
+CreateEventTitle_eventName=Nazwa wydarzenia
 CreateEventLabel_status=Status:
 CreateEventTitle_status=Status
-EditEventTitle=Edytuj Event
+EditEventTitle=Edytuj wydarzenie
 EditEventSaveLink=Zapisz
 EditEventViewLink=Poka\u017c
-EditEventShowAllLink=Poka\u017c wszystkie Event Items
-EditEventIndexLink=Index
+EditEventShowAllLink=Poka\u017c wszystkie rekordy wydarze\u0144
+EditEventIndexLink=Indeks
 EditEventLabel_id=Id:
-EditEventRequiredMessage_id=The Id pole jest wymagane.
+EditEventRequiredMessage_id=Pole Id jest wymagane.
 EditEventTitle_id=Id
-EditEventLabel_eventDesc=EventDesc:
-EditEventTitle_eventDesc=EventDesc
-EditEventLabel_eventName=EventName:
-EditEventTitle_eventName=EventName
+EditEventLabel_eventDesc=Opis wydarzenia:
+EditEventTitle_eventDesc=Opis wydarzenia
+EditEventLabel_eventName=Nazwa wydarzenia:
+EditEventTitle_eventName=Nazwa wydarzenia
 EditEventLabel_status=Status:
 EditEventTitle_status=Status
 ViewEventTitle=Poka\u017c
 ViewEventDestroyLink=Usu\u0144
 ViewEventEditLink=Edytuj
-ViewEventCreateLink=Utw\u00f3rz nowy Event
-ViewEventShowAllLink=Poka\u017c wszystkie Event Items
-ViewEventIndexLink=Index
+ViewEventCreateLink=Utw\u00f3rz nowy rekord
+ViewEventShowAllLink=Poka\u017c wszystkie rekordy
+ViewEventIndexLink=Indeks
 ViewEventLabel_id=Id:
 ViewEventTitle_id=Id
-ViewEventLabel_eventDesc=EventDesc:
-ViewEventTitle_eventDesc=EventDesc
-ViewEventLabel_eventName=EventName:
-ViewEventTitle_eventName=EventName
+ViewEventLabel_eventDesc=Opis wydarzenia:
+ViewEventTitle_eventDesc=Opis wydarzenia
+ViewEventLabel_eventName=Nazwa wydarzenia:
+ViewEventTitle_eventName=Nazwa wydarzenia
 ViewEventLabel_status=Status:
 ViewEventTitle_status=Status
 ListEventTitle=List
-ListEventEmpty=(No Event Items Found)
+ListEventEmpty=Nie znaleziono rekord\u00f3w
 ListEventDestroyLink=Usu\u0144
 ListEventEditLink=Edytuj
 ListEventViewLink=Poka\u017c
 ListEventCreateLink=Utw\u00f3rz nowy Event
-ListEventIndexLink=Index
+ListEventIndexLink=Indeks
 ListEventTitle_id=Id
-ListEventTitle_eventDesc=EventDesc
-ListEventTitle_eventName=EventName
+ListEventTitle_eventDesc=Opis wydarzenia
+ListEventTitle_eventName=Nazwa wydarzenia
 ListEventTitle_status=Status
-Group1Created=Group1 zosta\u0142 poprawnie dodany.
-Group1Updated=Group1 zosta\u0142 poprawnie zmieniony.
-Group1Deleted=Group1 zosta\u0142 poprawnie usuni\u0119ty.
-CreateGroup1Title=Utw\u00f3rz nowy Group1
+Group1Created=Rekord Group1 zosta\u0142 poprawnie dodany.
+Group1Updated=Rekord Group1 zosta\u0142 poprawnie zmieniony.
+Group1Deleted=Rekord Group1 zosta\u0142 poprawnie usuni\u0119ty.
+CreateGroup1Title=Utw\u00f3rz nowy rekord Group1
 CreateGroup1SaveLink=Zapisz
 CreateGroup1ShowAllLink=Poka\u017c wszystkie Group1 Items
-CreateGroup1IndexLink=Index
+CreateGroup1IndexLink=Indeks
 CreateGroup1Label_idgroup=Idgroup:
-CreateGroup1RequiredMessage_idgroup=The Idgroup pole jest wymagane.
+CreateGroup1RequiredMessage_idgroup=Pole Idgroup jest wymagane.
 CreateGroup1Title_idgroup=Idgroup
-CreateGroup1Label_groupDesc=GroupDesc:
-CreateGroup1Title_groupDesc=GroupDesc
+CreateGroup1Label_groupDesc=Opis grupy:
+CreateGroup1Title_groupDesc=Opis grupy
 CreateGroup1Label_groupName=GroupName:
 CreateGroup1Title_groupName=GroupName
 EditGroup1Title=Edytuj Group1
@@ -217,10 +217,10 @@ EditGroup1IndexLink=Index
 EditGroup1Label_idgroup=Idgroup:
 EditGroup1RequiredMessage_idgroup=The Idgroup pole jest wymagane.
 EditGroup1Title_idgroup=Idgroup
-EditGroup1Label_groupDesc=GroupDesc:
-EditGroup1Title_groupDesc=GroupDesc
-EditGroup1Label_groupName=GroupName:
-EditGroup1Title_groupName=GroupName
+EditGroup1Label_groupDesc=Opis grupy:
+EditGroup1Title_groupDesc=Opis grupy
+EditGroup1Label_groupName=Nazwa grupy:
+EditGroup1Title_groupName=Nazwa grupy
 ViewGroup1Title=Poka\u017c
 ViewGroup1DestroyLink=Usu\u0144
 ViewGroup1EditLink=Edytuj
@@ -229,20 +229,20 @@ ViewGroup1ShowAllLink=Poka\u017c wszystkie Group1 Items
 ViewGroup1IndexLink=Index
 ViewGroup1Label_idgroup=Idgroup:
 ViewGroup1Title_idgroup=Idgroup
-ViewGroup1Label_groupDesc=GroupDesc:
-ViewGroup1Title_groupDesc=GroupDesc
-ViewGroup1Label_groupName=GroupName:
-ViewGroup1Title_groupName=GroupName
+ViewGroup1Label_groupDesc=Opis grupy:
+ViewGroup1Title_groupDesc=Opis grupy
+ViewGroup1Label_groupName=Nazwa grupy:
+ViewGroup1Title_groupName=Nazwa grupy
 ListGroup1Title=List
-ListGroup1Empty=(No Group1 Items Found)
+ListGroup1Empty=Nie znaleziono rekord\u00f3w
 ListGroup1DestroyLink=Usu\u0144
 ListGroup1EditLink=Edytuj
 ListGroup1ViewLink=Poka\u017c
 ListGroup1CreateLink=Utw\u00f3rz nowy Group1
 ListGroup1IndexLink=Index
 ListGroup1Title_idgroup=Idgroup
-ListGroup1Title_groupDesc=GroupDesc
-ListGroup1Title_groupName=GroupName
+ListGroup1Title_groupDesc=Opis grupy
+ListGroup1Title_groupName=Nazwa grupy
 GroupEventsCreated=GroupEvents zosta\u0142 poprawnie dodany.
 GroupEventsUpdated=GroupEvents zosta\u0142 poprawnie zmieniony.
 GroupEventsDeleted=GroupEvents zosta\u0142 poprawnie usuni\u0119ty.
@@ -286,7 +286,7 @@ ViewGroupEventsTitle_groupId=GroupId
 ViewGroupEventsLabel_eventId=EventId:
 ViewGroupEventsTitle_eventId=EventId
 ListGroupEventsTitle=List
-ListGroupEventsEmpty=(No GroupEvents Items Found)
+ListGroupEventsEmpty=Nie znaleziono rekord\u00f3w
 ListGroupEventsDestroyLink=Usu\u0144
 ListGroupEventsEditLink=Edytuj
 ListGroupEventsViewLink=Poka\u017c
@@ -366,7 +366,7 @@ ViewInfoTitle_addInfo=AddInfo
 ViewInfoLabel_eventId=EventId:
 ViewInfoTitle_eventId=EventId
 ListInfoTitle=List
-ListInfoEmpty=(No Info Items Found)
+ListInfoEmpty=Nie znaleziono rekord\u00f3w
 ListInfoDestroyLink=Usu\u0144
 ListInfoEditLink=Edytuj
 ListInfoViewLink=Poka\u017c
@@ -419,7 +419,7 @@ ViewNoticeTitle_message=Message
 ViewNoticeLabel_title=Title:
 ViewNoticeTitle_title=Title
 ListNoticeTitle=List
-ListNoticeEmpty=(No Notice Items Found)
+ListNoticeEmpty=Nie znaleziono rekord\u00f3w
 ListNoticeDestroyLink=Usu\u0144
 ListNoticeEditLink=Edytuj
 ListNoticeViewLink=Poka\u017c
@@ -487,7 +487,7 @@ ViewPointTitle_orderNr=OrderNr
 ViewPointLabel_trackId=TrackId:
 ViewPointTitle_trackId=TrackId
 ListPointTitle=List
-ListPointEmpty=(No Point Items Found)
+ListPointEmpty=Nie znaleziono rekord\u00f3w
 ListPointDestroyLink=Usu\u0144
 ListPointEditLink=Edytuj
 ListPointViewLink=Poka\u017c
@@ -538,7 +538,7 @@ ViewRoleTitle_roledesc=Roledesc
 ViewRoleLabel_rolename=Rolename:
 ViewRoleTitle_rolename=Rolename
 ListRoleTitle=List
-ListRoleEmpty=(No Role Items Found)
+ListRoleEmpty=Nie znaleziono rekord\u00f3w
 ListRoleDestroyLink=Usu\u0144
 ListRoleEditLink=Edytuj
 ListRoleViewLink=Poka\u017c
@@ -594,7 +594,7 @@ ViewTrackTitle_trackName=TrackName
 ViewTrackLabel_eventId=EventId:
 ViewTrackTitle_eventId=EventId
 ListTrackTitle=List
-ListTrackEmpty=(No Track Items Found)
+ListTrackEmpty=Nie znaleziono rekord\u00f3w
 ListTrackDestroyLink=Usu\u0144
 ListTrackEditLink=Edytuj
 ListTrackViewLink=Poka\u017c
@@ -658,29 +658,29 @@ ViewUserLabel_id=Id:
 ViewUserTitle_id=Id
 ViewUserLabel_email=Email:
 ViewUserTitle_email=Email
-ViewUserLabel_firstname=Firstname:
-ViewUserTitle_firstname=Firstname
-ViewUserLabel_lastname=Lastname:
-ViewUserTitle_lastname=Lastname
-ViewUserLabel_password=Password:
-ViewUserTitle_password=Password
-ViewUserLabel_username=Username:
-ViewUserTitle_username=Username
+ViewUserLabel_firstname=Imi\u0119:
+ViewUserTitle_firstname=Imi\u0119
+ViewUserLabel_lastname=Nazwisko:
+ViewUserTitle_lastname=Nazwisko
+ViewUserLabel_password=Has\u0142o:
+ViewUserTitle_password=Has\u0142o
+ViewUserLabel_username=Login:
+ViewUserTitle_username=Login
 ViewUserLabel_addressId=AddressId:
 ViewUserTitle_addressId=AddressId
 ListUserTitle=List
-ListUserEmpty=(No User Items Found)
+ListUserEmpty=Nie znaleziono rekord\u00f3w
 ListUserDestroyLink=Usu\u0144
 ListUserEditLink=Edytuj
 ListUserViewLink=Poka\u017c
 ListUserCreateLink=Utw\u00f3rz nowy User
-ListUserIndexLink=Index
+ListUserIndexLink=Indeks
 ListUserTitle_id=Id
 ListUserTitle_email=Email
-ListUserTitle_firstname=Firstname
-ListUserTitle_lastname=Lastname
-ListUserTitle_password=Password
-ListUserTitle_username=Username
+ListUserTitle_firstname=Imi\u0119
+ListUserTitle_lastname=Nazwisko
+ListUserTitle_password=Has\u0142o
+ListUserTitle_username=Login
 ListUserTitle_addressId=AddressId
 UserGroupsCreated=UserGroups zosta\u0142 poprawnie dodany.
 UserGroupsUpdated=UserGroups zosta\u0142 poprawnie zmieniony.
@@ -736,7 +736,7 @@ ListUserGroupsDestroyLink=Usu\u0144
 ListUserGroupsEditLink=Edytuj
 ListUserGroupsViewLink=Poka\u017c
 ListUserGroupsCreateLink=Utw\u00f3rz nowy UserGroups
-ListUserGroupsIndexLink=Index
+ListUserGroupsIndexLink=Indeks
 ListUserGroupsTitle_id=Id
 ListUserGroupsTitle_status=Status
 ListUserGroupsTitle_userId=UserId
@@ -793,7 +793,7 @@ ViewImagesEventTitle_imagePath=ImagePath
 ViewImagesEventLabel_eventId=EventId:
 ViewImagesEventTitle_eventId=EventId
 ListImagesEventTitle=List
-ListImagesEventEmpty=(No ImagesEvent Items Found)
+ListImagesEventEmpty=Nie znaleziono rekord\u00f3w
 ListImagesEventDestroyLink=Usu\u0144
 ListImagesEventEditLink=Edytuj
 ListImagesEventViewLink=Poka\u017c
@@ -808,7 +808,7 @@ ImagesNoticeUpdated=ImagesNotice zosta\u0142 poprawnie zmieniony.
 ImagesNoticeDeleted=ImagesNotice zosta\u0142 poprawnie deleted.
 CreateImagesNoticeTitle=Utw\u00f3rz New ImagesNotice
 CreateImagesNoticeSaveLink=Zapisz
-CreateImagesNoticeShowAllLink=Show All ImagesNotice Items
+CreateImagesNoticeShowAllLink=Poka\u017c wszystkie ImagesNotice Items
 CreateImagesNoticeIndexLink=Index
 CreateImagesNoticeLabel_idimagesNotice=IdimagesNotice:
 CreateImagesNoticeRequiredMessage_idimagesNotice=The IdimagesNotice pole jest wymagane.
@@ -842,8 +842,8 @@ EditImagesNoticeTitle_eventId=EventId
 ViewImagesNoticeTitle=Poka\u017c
 ViewImagesNoticeDestroyLink=Usu\u0144
 ViewImagesNoticeEditLink=Edytuj
-ViewImagesNoticeCreateLink=Utw\u00f3rz New ImagesNotice
-ViewImagesNoticeShowAllLink=Poka\u017c All ImagesNotice Items
+ViewImagesNoticeCreateLink=Utw\u00f3rz nowy ImagesNotice
+ViewImagesNoticeShowAllLink=Poka\u017c wszystkie ImagesNotice Items
 ViewImagesNoticeIndexLink=Index
 ViewImagesNoticeLabel_idimagesNotice=IdimagesNotice:
 ViewImagesNoticeTitle_idimagesNotice=IdimagesNotice
@@ -854,11 +854,11 @@ ViewImagesNoticeTitle_imagesPath=ImagesPath
 ViewImagesNoticeLabel_eventId=EventId:
 ViewImagesNoticeTitle_eventId=EventId
 ListImagesNoticeTitle=List
-ListImagesNoticeEmpty=(No ImagesNotice Items Found)
-ListImagesNoticeDestroyLink=Destroy
+ListImagesNoticeEmpty=Nie znaleziono rekord\u00f3w
+ListImagesNoticeDestroyLink=Usu\u0144
 ListImagesNoticeEditLink=Edytuj
 ListImagesNoticeViewLink=Poka\u017c
-ListImagesNoticeCreateLink=Utw\u00f3rz New ImagesNotice
+ListImagesNoticeCreateLink=Utw\u00f3rz nowy ImagesNotice
 ListImagesNoticeIndexLink=Index
 ListImagesNoticeTitle_idimagesNotice=IdimagesNotice
 ListImagesNoticeTitle_imagesDesc=ImagesDesc
