--- a/beck_app/src/main/resources/Bundle.properties
+++ b/beck_app/src/main/resources/Bundle.properties
@@ -143,7 +143,7 @@ ListCommunicationTitle_userIdTo=Do
 EventCreated=Rekord wydarzenia zosta\u0142 poprawnie dodany.
 EventUpdated=Rekord wydarzenia zosta\u0142 poprawnie zmieniony.
 EventDeleted=Rekord wydarzenia zosta\u0142 poprawnie usuni\u0119ty.
-CreateEventTitle=Utw\u00f3rz nowy Rekord wydarzenia
+CreateEventTitle=Utw\u00f3rz nowe wydarzenia
 CreateEventSaveLink=Zapisz
 CreateEventShowAllLink=Poka\u017c wszystkie rekordy wydarzenia
 CreateEventIndexLink=Indeks
@@ -767,22 +767,22 @@ EditImagesEventViewLink=Poka\u017c
 EditImagesEventShowAllLink=Poka\u017c All ImagesEvent Items
 EditImagesEventIndexLink=Index
 EditImagesEventLabel_idImages=IdImages:
-EditImagesEventRequiredMessage_idImages=The IdImages pole jest wymagane.
+EditImagesEventRequiredMessage_idImages=Pole IdImages jest wymagane.
 EditImagesEventTitle_idImages=IdImages
 EditImagesEventLabel_imageDesc=ImageDesc:
-EditImagesEventRequiredMessage_imageDesc=The ImageDesc pole jest wymagane.
+EditImagesEventRequiredMessage_imageDesc=Pole ImageDesc jest wymagane.
 EditImagesEventTitle_imageDesc=ImageDesc
 EditImagesEventLabel_imagePath=ImagePath:
-EditImagesEventRequiredMessage_imagePath=The ImagePath pole jest wymagane.
+EditImagesEventRequiredMessage_imagePath=Pole ImagePath jest wymagane.
 EditImagesEventTitle_imagePath=ImagePath
 EditImagesEventLabel_eventId=EventId:
-EditImagesEventRequiredMessage_eventId=The EventId pole jest wymagane.
+EditImagesEventRequiredMessage_eventId=Pole EventId jest wymagane.
 EditImagesEventTitle_eventId=EventId
 ViewImagesEventTitle=Poka\u017c
 ViewImagesEventDestroyLink=Destroy
 ViewImagesEventEditLink=Edytuj
-ViewImagesEventCreateLink=Utw\u00f3rz New ImagesEvent
-ViewImagesEventShowAllLink=Show All ImagesEvent Items
+ViewImagesEventCreateLink=Utw\u00f3rz nowy rekord ImagesEvent
+ViewImagesEventShowAllLink=Poka\u017c wszystkie rekordy ImagesEvent Items
 ViewImagesEventIndexLink=Index
 ViewImagesEventLabel_idImages=IdImages:
 ViewImagesEventTitle_idImages=IdImages
@@ -797,7 +797,7 @@ ListImagesEventEmpty=Nie znaleziono rekord\u00f3w
 ListImagesEventDestroyLink=Usu\u0144
 ListImagesEventEditLink=Edytuj
 ListImagesEventViewLink=Poka\u017c
-ListImagesEventCreateLink=Utw\u00f3rz New ImagesEvent
+ListImagesEventCreateLink=Utw\u00f3rz nowy rekord ImagesEvent
 ListImagesEventIndexLink=Index
 ListImagesEventTitle_idImages=IdImages
 ListImagesEventTitle_imageDesc=ImageDesc
@@ -859,7 +859,7 @@ ListImagesNoticeDestroyLink=Usu\u0144
 ListImagesNoticeEditLink=Edytuj
 ListImagesNoticeViewLink=Poka\u017c
 ListImagesNoticeCreateLink=Utw\u00f3rz nowy ImagesNotice
-ListImagesNoticeIndexLink=Index
+ListImagesNoticeIndexLink=Indeks
 ListImagesNoticeTitle_idimagesNotice=IdimagesNotice
 ListImagesNoticeTitle_imagesDesc=ImagesDesc
 ListImagesNoticeTitle_imagesPath=ImagesPath
